<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/question_0_button" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Green Buttons -->
        <Button
            android:id="@+id/answer_0_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_0_answer_0_button" />

        <Button
            android:id="@+id/answer_1_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_0_answer_1_button" />

        <Button
            android:id="@+id/answer_2_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_0_answer_2_button" />

        <Button
            android:id="@+id/answer_3_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_0_answer_3_button" />

    </LinearLayout>

    <!-- Purple Buttons -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/hint_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_button" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>
